--- a/example/backend/package.json
+++ b/example/backend/package.json
@@ -3,14 +3,28 @@
   "version": "1.0.0",
   "private": true,
   "description": "Example backend for app_pigeon",
-  "main": "server.js",
+  "main": "src/server.js",
+  "type": "module",
   "scripts": {
-    "start": "node server.js"
+    "start": "node src/server.js",
+    "dev": "nodemon -L src/server.js",
+    "staging": "env-cmd -f .env.staging node src/server.js",
+    "prod": "env-cmd -f .env.production node src/server.js",
+    "beta": "env-cmd -f .env.beta node src/server.js"
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "cloudinary": "^2.9.0",
     "cors": "^2.8.5",
     "express": "^4.19.2",
-    "mongoose": "^9.1.4"
+    "http-status": "^1.7.0",
+    "jsonwebtoken": "^9.0.3",
+    "mongoose": "^9.1.4",
+    "multer": "^2.0.2",
+    "nodemailer": "^7.0.12",
+    "socket.io": "^4.8.3"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.11"
   }
 }
