--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -39,10 +39,17 @@ dependencies:
   flutter_animate: ^4.5.2
   intl: ^0.20.2
   get_it: ^9.2.0
+  
+  json_annotation: ^4.10.0
+  freezed_annotation: ^3.1.0
+  
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  json_serializable: ^6.12.0
+  freezed: ^3.2.5
+  build_runner: ^2.11.1
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
